Added sitemap generation

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:title" content="Danish Ansari" />
   <meta property="og:description" content="Danish's personal website featuring his projects, technical writings, and insights in robotics and machine learning." />
   <meta property="og:image" content="https://i.ibb.co/vmBrhSd/OG.png" />
-  <meta property="og:image:alt" content="Danish's Portfolio Preview" />
+  <meta property="og:image:alt" content="Danish's Website" />
   <meta property="og:url" content="https://dan10ish.github.io" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Danish" />
@@ -28,7 +28,7 @@
   <meta name="twitter:title" content="Danish Ansari" />
   <meta name="twitter:description" content="Danish's personal website featuring his projects, technical writings, and insights in robotics and machine learning." />
   <meta name="twitter:image" content="https://i.ibb.co/vmBrhSd/OG.png" />
-  <meta name="twitter:image:alt" content="Danish's Portfolio Preview" />
+  <meta name="twitter:image:alt" content="Danish's Website" />
   <meta property="article:author" content="Danish Ansari" />
   <meta name="linkedin:owner" content="dan10ish" />
   <meta name="profile:username" content="dan10ish" />
