--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" href="/icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="theme-color" content="" />
+  <meta name="theme-color" content="#e8e8e8" />
   <title>Danish Ansari</title>
-  <meta name="description" content="Danish Ansari is a mechatronics engineer exploring machine learning, robotics and finance. Portfolio featuring projects and technical writings." />
+  <meta name="description"
+    content="Danish Ansari is a mechatronics engineer exploring machine learning, robotics and finance. Portfolio featuring projects and technical writings." />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://dan10ish.github.io" />
   <meta property="og:title" content="Danish Ansari" />
-  <meta property="og:description" content="Portfolio featuring projects in machine learning, robotics, and web development by Danish Ansari." />
+  <meta property="og:description"
+    content="Portfolio featuring projects in machine learning, robotics, and web development by Danish Ansari." />
   <meta property="og:image" content="https://i.ibb.co/vmBrhSd/OG.png" />
   <meta property="og:url" content="https://dan10ish.github.io" />
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Danish Ansari" />
-  <meta name="twitter:description" content="Portfolio featuring projects in machine learning, robotics, and web development by Danish Ansari." />
+  <meta name="twitter:description"
+    content="Portfolio featuring projects in machine learning, robotics, and web development by Danish Ansari." />
   <meta name="twitter:image" content="https://i.ibb.co/vmBrhSd/OG.png" />
-  <link rel="manifest" href="/manifest.json" />
   <meta name="google-site-verification" content="ff7bda5d38dd951b" />
   <script type="application/ld+json">
   {
