--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#e8e8e8" media="(prefers-color-scheme: light)" />
   <meta name="theme-color" content="#1a1a1a" media="(prefers-color-scheme: dark)" />
-  <meta name="color-scheme" content="light dark" />
+  <!-- <meta name="color-scheme" content="light dark" /> -->
   <title>Danish Ansari</title>
   <meta name="description"
     content="Danish Ansari is a mechatronics engineer exploring machine learning, robotics and finance. Portfolio featuring projects and technical writings." />
